--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
                         </div>
                         <JaNeinInput label="Konsumieren Sie Tabak- oder Nikotinprodukte?" field="tobacco" placeholder="Welche Produkte und wie häufig?" formData={formData} setFormData={setFormData} noAnswers={noAnswers} setNoAnswers={setNoAnswers} interact={interact} />
                         <JaNeinInput label="Konsumieren Sie regelmäßig alkoholische Getränke?" field="alcohol" placeholder="Welche Getränke und wie häufig?" formData={formData} setFormData={setFormData} noAnswers={noAnswers} setNoAnswers={setNoAnswers} interact={interact} />
-                        <JaNeinInput label="Nutzen Sie illegale Substanzen (z.B. Cannabis, Kokain)?" field="drugs" placeholder="Welche Substanzen und wie häufig?" formData={formData} setFormData={setFormData} noAnswers={noAnswers} setNoAnswers={setNoAnswers} interact={interact} />
+                        <JaNeinInput label="Konsumieren Sie Drogen (z.B. Cannabis, Kokain)?" field="drugs" placeholder="Welche Substanzen und wie häufig?" formData={formData} setFormData={setFormData} noAnswers={noAnswers} setNoAnswers={setNoAnswers} interact={interact} />
                     </section>
 
                     <section className="space-y-12">
